Fix Sonarqube warnings